--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <!-- Custom CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
-    <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+    <link id="themeCss" href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
