added user service and login/logout functions

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+
+  <!--Google Auth-->
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id"
+    content="532780576026-e115ccdkhmm944241buvt3a5a0iv3un2.apps.googleusercontent.com">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
